_2009_01_30__17_50_04_ Chi-Hsiu Liang

  * The difference of the k_infinity is identified as that the k(E)s in the reaction operator is normalized unit of time.
    So if one wants to get back the k_infinities he needs to multiply the values by omega.

_2009_01_30__11_53_42_ Chi-Hsiu Liang

  * Added a test file in pentyl system for basisset method.

_2009_01_29__20_05_31_ Chi-Hsiu Liang

  * Changed the names of isomerMap and sourceMap to molMapType.
  * Added a routine matrices_multiplication() in MesmerMath.h
  * Added a routine   void ReactionManager::constructBasisMatrix(void)
    which constructs a basis matrix M''. This matrix is the reaction operator transformed by the conserve-well eigenvectors.
    The whole idea is still under testing. It is made sure that when there is no isomerization by commenting out the reaction 
    terms in IsomerizationReaction.cpp, the basis matrix is simply a matrix filled with diagonal terms, which are the eigenvalues
    of the conserved-well, whereas the rest entries of the matrix are nearly zero.
    Now it is required to test: 1. whether the lower-right members of the respective wells are k_infinity's. It is observed that
    the values are propotional to k_infinity's but it is unsure why they are different.

_2009_01_26__16_47_26_ Chi-Hsiu Liang

  * Tidied up and made sure MESMER also compile on cygwin.

2009-01-25 Chris Morley -- Version merged from v284-285 in branch FlattenedMolecule

  If get functions (like Molecule::getDOS()) for MolecularComponents fail 
  they now make a new object.
  
  The initialization of MolecularComponents has been moved from InitializeProperies()
  to the constructors. This prevents the use of an unitialized MolecularComponent.
  
  Remove Molecule::activateRole() and roleIsActivated() so that the properties
  are read from the XML file only when they are needed in the calculation.
  This was really just to that it could be done. Something similar will have to